[FIX] html_editor: force RTL right alignment of URL in link popover
When using a right-to-left language, the URL field inside the link
popover behaves a bit strangely because some characters are interpreted
as RTL while some other are not.

This commit forces that URL field to be fully LTR but right-aligned,
when used in RTL.

Steps to reproduce:
- Set the user's language to Arabic
- Open the link popup
- Type "http://"

=> "//:http" was displayed

task-5155800

Part-of: odoo/odoo#241442

--- a/addons/html_editor/static/src/main/link/link_popover.scss
+++ b/addons/html_editor/static/src/main/link/link_popover.scss
@@ -37,6 +37,17 @@
     }
 }
 
+/* rtl:begin:ignore */
+.o_rtl {
+    .o-we-linkpopover {
+        .o_we_href_input_link {
+            direction: ltr;
+            text-align: right;
+        }
+    }
+}
+/* rtl:end:ignore */
+
 .o_seo_option_child {
     padding-left: 20px;
     position: relative;
